# simple_mirror

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
accounts/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/repositories/: otp_repo.py  user_repo.py
accounts/services/: auth_service.py  email_service.py  login_cache.py  otp_cache.py
accounts/templates/accounts/: base.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  register.html  verify.html
healthcheck/: exceptions.py  urls.py  views.py
healthcheck/services/: health_check_service.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
mirror/: urls.py  views.py
mirror/templates/mirror/: index.html
simple_mirror/: settings.py  settings_test.py  urls.py  wsgi.py
simple_mirror/infrastructure/: qdrant_client.py
tests/: conftest.py  test_mirror.py
tests/integration/: conftest.py  test_admin.py  test_auth_views.py  test_healthcheck_views.py  test_mirror_views.py  test_otp_repo.py  test_user_repo.py
tests/unit/: conftest.py  test_auth_service.py  test_email_service.py  test_forms.py  test_health_check_service.py  test_login_cache.py  test_models.py  test_otp_cache.py  test_qdrant_client.py  test_user_repo.py
